# oltp-warehouse

./: .env.example  .gitignore  README.md  dbt_project.yml  docker-compose.yml  main.py  profiles.yml  pyproject.toml
dbt/models/: sources.yml
dbt/models/silver/: schema.yml  silver_accounts.sql  silver_payments.sql  silver_transactions.sql  silver_transfers.sql
docs/: data-contracts.md
src/oltp_warehouse/: __init__.py  cdc.py  cli.py  config.py  generator.py  observability.py  seed_data.py  validation.py
tests/: test_cdc.py  test_observability.py  test_seed_data.py  test_transformations.py  test_validation.py
